--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -10,8 +10,10 @@ export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path="builds/Windows/Project Squad.exe"
+patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
+seed=0
 encrypt_pck=false
 encrypt_directory=false
 script_export_mode=2
@@ -82,8 +84,10 @@ export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path="builds/mac/ProjectSquad.zip"
+patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
+seed=0
 encrypt_pck=false
 encrypt_directory=false
 script_export_mode=2
@@ -104,7 +108,8 @@ application/short_version=""
 application/version=""
 application/copyright=""
 application/copyright_localized={}
-application/min_macos_version="10.12"
+application/min_macos_version_x86_64="10.12"
+application/min_macos_version_arm64="11.00"
 application/export_angle=0
 display/high_res=true
 application/additional_plist_content=""
@@ -142,6 +147,7 @@ codesign/entitlements/app_sandbox/files_music=0
 codesign/entitlements/app_sandbox/files_movies=0
 codesign/entitlements/app_sandbox/files_user_selected=0
 codesign/entitlements/app_sandbox/helper_executables=[]
+codesign/entitlements/additional=""
 codesign/custom_options=PackedStringArray()
 notarization/notarization=0
 privacy/microphone_usage_description=""
@@ -322,6 +328,7 @@ rm -rf \"{temp_dir}\""
 dotnet/include_scripts_content=false
 dotnet/include_debug_symbols=true
 dotnet/embed_build_outputs=false
+application/min_macos_version="10.12"
 
 [preset.2]
 
@@ -335,8 +342,10 @@ export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path="builds/linux/Project Squad.x86_64"
+patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
+seed=0
 encrypt_pck=false
 encrypt_directory=false
 script_export_mode=2
